[package]
name = "rgl"
version = "0.2.0"
authors = ["Matthew Hopson"]
license = "MIT OR Apache-2.0"
description = "Safe thin wrapper for OpenGL using the gl-rs crate"
repository = "https://github.com/Hopson97/rusty-gl"
readme = "README.md"
documentation = "https://docs.rs/rgl"

[dependencies]
gl = "0.6.0"

[dev-dependencies]
gl = "0.6.0"
glutin = "0.20.0"
image = "0.19.0"

[[example]]
name = "simple_shaders"

[[example]]
name = "triangle"

[[example]]
name = "texture"
